<resources>
    <string name="app_name">JobAppClientside</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="search">Search</string>
    <string name="saved_jobs">Saved jobs</string>
    <string name="profile">Profile</string>
    <string name="search_for_any_job">Search for any job</string>
    <string name="account_details">Account details</string>
    <string name="create_a_job_posting">Create a job posting</string>
    <string name="my_job_postings">My job postings</string>
    <string name="my_job_applications">My job applications</string>
    <string name="title_position">Title / position:</string>
    <string name="enter_the_job_position">Enter the job position</string>
    <string name="company_name">Company Name:</string>
    <string name="enter_the_company_name">Enter the company name</string>
    <string name="location">Location:</string>
    <string name="employment_type">Employment type:</string>
    <string name="part_time">Part-time</string>
    <string name="salary_yearly">Salary(yearly):</string>
    <string name="description">Description:</string>
    <string name="enter_a_description_to_this_job">Enter a description to this job</string>
    <string name="requirements">Requirements:</string>
    <string name="benefits">Benefits:</string>
    <string name="enter_the_benefits_of_this_job">Enter the benefits of this job</string>
    <string name="enter_the_requirements_for_this_job">Enter the requirements for this job</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logo_image">Logo image:</string>
    <string name="pick">PICK</string>
    <string name="create_job_posting">Create job posting</string>
    <string name="filter_your_search">Filter your search</string>
    <string name="job_type">Job type:</string>
    <string name="full_time">Full-time</string>
    <string name="remote">Remote:</string>
    <string name="enter_any_location">Enter any location</string>
    <string name="minimum_salary">Minimum salary:</string>
    <string name="enter_any_amount">Enter any amount</string>
    <string name="apply_filters">Apply filters</string>
    <string name="on_site">(On-site)</string>
    <string name="logout">Logout</string>
    <string name="personal_details">Personal details</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone number:</string>
    <string name="name">Name:</string>
    <string name="apply_changes">Apply changes</string>
    <string name="contact_details">Contact details</string>
    <string name="contact_details2">Contact details:</string>
    <string name="phone">Phone:</string>
    <string name="delete_job">Delete job</string>
    <string name="edit_job">Edit job</string>
    <string name="profile_image">Profile Image:</string>
</resources>