<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:background="@color/primaryGreen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="2dp"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/tvCreateJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:textColor="@color/secondaryGrey"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="4dp"
                    android:text="@string/create_a_job_posting" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvJobTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBar"
                android:layout_marginTop="12dp"
                android:layout_marginStart="4dp"
                android:text="@string/title_position"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobTitle"
                android:layout_width="200dp"
                app:layout_constraintStart_toEndOf="@id/tvJobTitle"
                android:paddingStart="4dp"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@id/tvJobTitle"
                app:layout_constraintBottom_toBottomOf="@id/tvJobTitle"
                android:layout_marginStart="4dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/tvJobCompany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJobTitle"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/company_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobCompany"
                android:layout_width="200dp"
                app:layout_constraintStart_toEndOf="@id/tvJobCompany"
                android:paddingStart="4dp"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@id/tvJobCompany"
                app:layout_constraintBottom_toBottomOf="@id/tvJobCompany"
                android:layout_marginStart="4dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/tvJobLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJobCompany"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/location"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobLocation"
                android:layout_width="200dp"
                app:layout_constraintStart_toEndOf="@id/tvJobLocation"
                android:paddingStart="4dp"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="@id/tvJobLocation"
                app:layout_constraintBottom_toBottomOf="@id/tvJobLocation"
                android:layout_marginStart="4dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/tvJobType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJobLocation"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/employment_type"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvRemote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJobType"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="Remote:"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radioGrpType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvJobType"
                app:layout_constraintTop_toTopOf="@id/tvJobType"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/tvJobType">

                <RadioButton
                    android:id="@+id/btnFullTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_time" />

                <RadioButton
                    android:id="@+id/btnPartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/part_time" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGrpRemote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvRemote"
                app:layout_constraintTop_toTopOf="@id/tvRemote"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/tvRemote">

                <RadioButton
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvJobSalary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRemote"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/salary_yearly"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobSalary"
                android:layout_width="200dp"
                app:layout_constraintStart_toEndOf="@id/tvJobSalary"
                android:paddingStart="4dp"
                app:layout_constraintTop_toTopOf="@id/tvJobSalary"
                app:layout_constraintBottom_toBottomOf="@id/tvJobSalary"
                android:inputType="number"
                android:layout_marginStart="4dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/tvJobDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJobSalary"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobDescription"
                android:layout_width="300dp"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="4dp"
                android:inputType="textMultiLine"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/tvJobDescription"
                android:background="@drawable/credentials_background"
                android:layout_marginStart="4dp"
                android:textColorHint="@color/secondaryGrey"
                android:gravity="top"
                android:minHeight="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_description_to_this_job" />

            <TextView
                android:id="@+id/tvJobRequirements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etJobDescription"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/requirements"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobRequirements"
                android:layout_width="300dp"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvJobRequirements"
                android:background="@drawable/credentials_background"
                android:layout_marginStart="4dp"
                android:textColorHint="@color/secondaryGrey"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_requirements_for_this_job" />

            <TextView
                android:id="@+id/tvJobBenefits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etJobRequirements"
                android:layout_marginTop="18dp"
                android:layout_marginStart="4dp"
                android:text="@string/benefits"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etJobBenefits"
                android:layout_width="300dp"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/tvJobBenefits"
                android:background="@drawable/credentials_background"
                android:layout_marginStart="4dp"
                android:textColorHint="@color/secondaryGrey"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_benefits_of_this_job" />

            <TextView
                android:id="@+id/tvJobLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etJobBenefits"
                android:layout_marginTop="30dp"
                android:layout_marginStart="4dp"
                android:text="@string/logo_image"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imgJobLogo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@id/tvJobLogo"
                app:layout_constraintTop_toTopOf="@id/tvJobLogo"
                android:layout_marginStart="4dp"
                android:src="@drawable/no_job_image"
                app:layout_constraintBottom_toBottomOf="@id/tvJobLogo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imgJobLogo"
                app:layout_constraintTop_toTopOf="@id/imgJobLogo"
                app:layout_constraintBottom_toBottomOf="@id/imgJobLogo"
                android:layout_marginStart="8dp"
                android:text="@string/pick"
                android:textStyle="bold"
                android:textColor="@color/secondaryGrey"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateJobPost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvJobLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/create_job_posting" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:layout_marginBottom="400dp"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
