<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:background="@color/primaryGreen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="2dp"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/tvCreateJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:textColor="@color/secondaryGrey"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/personal_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvProfileImage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            android:text="@string/profile_image"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondaryGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewProfilePic"
            android:layout_width="60dp"
            app:layout_constraintStart_toEndOf="@id/tvProfileImage"
            app:layout_constraintTop_toTopOf="@id/tvProfileImage"
            app:layout_constraintBottom_toBottomOf="@id/tvProfileImage"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="40dp"
            android:elevation="0dp"
            android:layout_marginTop="2dp"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/imgProfileIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_loading" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickImage"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cardViewProfilePic"
            app:layout_constraintTop_toTopOf="@id/cardViewProfilePic"
            app:layout_constraintBottom_toBottomOf="@id/cardViewProfilePic"
            android:layout_marginStart="16dp"
            android:text="@string/pick"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProfileImage"
            android:layout_marginTop="24dp"
            android:layout_marginStart="4dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondaryGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="200dp"
            app:layout_constraintStart_toEndOf="@id/tvName"
            android:paddingStart="4dp"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="@id/tvName"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            android:layout_marginStart="4dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            android:layout_marginTop="18dp"
            android:layout_marginStart="4dp"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondaryGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="200dp"
            app:layout_constraintStart_toEndOf="@id/tvPhoneNumber"
            android:paddingStart="4dp"
            android:inputType="phone"
            app:layout_constraintTop_toTopOf="@id/tvPhoneNumber"
            app:layout_constraintBottom_toBottomOf="@id/tvPhoneNumber"
            android:layout_marginStart="4dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
            android:layout_marginTop="18dp"
            android:layout_marginStart="4dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondaryGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="250dp"
            app:layout_constraintStart_toEndOf="@id/tvEmail"
            android:paddingStart="4dp"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toTopOf="@id/tvEmail"
            app:layout_constraintBottom_toBottomOf="@id/tvEmail"
            android:layout_marginStart="4dp"
            android:layout_height="50dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/apply_changes"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="300dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>